--- a/README/data_exploration.ipynb
+++ b/README/data_exploration.ipynb
@@ -2,48 +2,54 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Exploration of the traffic sign dataset"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "# Exploration of the traffic sign dataset"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# 1. Import libraries and datasets"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "# 1. Import libraries and datasets"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pickle\n",
     "import os"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   },
    "outputs": [],
    "source": [
     "# Get the training and testing dataset\n",
@@ -51,64 +57,65 @@
     "    train = pickle.load(training_data)\n",
     "with open(os.path.join(\"dataset\", \"valid.p\"), mode='rb') as validation_data:\n",
     "    valid = pickle.load(validation_data)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   },
    "outputs": [],
    "source": [
     "# Get the features and labels of the datasets\n",
     "# The features are the images of the signs\n",
     "X_train, y_train = train['features'], train['labels']\n",
     "X_valid, y_valid = valid['features'], valid['labels']"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# 2. Visualize traffic sign dataset"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "# 2. Visualize traffic sign dataset"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Number of training examples: \", X_train.shape[0])\n",
     "print(\"Number of validation examples: \", X_valid.shape[0])\n",
     "print(\"Image data shape =\", X_train[0].shape)\n",
     "print(\"Number of classes =\", len(np.unique(y_train)))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Plot a random picture from the training dataset\n",
@@ -116,18 +123,18 @@
     "plt.grid(False)\n",
     "plt.imshow(X_train[i])\n",
     "print(\"Label: \", y_train[i])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Plot (width x height) pictures from the training dataset\n",
@@ -144,18 +151,17 @@
     "    axes[i].axis('off')\n",
     "\n",
     "plt.subplots_adjust(hspace = 0.3)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Plotting histograms of the count of each sign\n",
@@ -173,32 +179,32 @@
     "    plt.xlabel(label)\n",
     "    plt.ylabel(\"Image count\")\n",
     "    plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "histogram_plot(y_train, \"Training examples\")\n",
     "histogram_plot(y_valid, \"Validation examples\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# A list of all classes:\n",
     "- 0 = Speed limit (20km/h)\n",
@@ -244,25 +250,19 @@
     "- 40 = Roundabout mandatory\n",
     "- 41 = End of no passing\n",
     "- 42 = End of no passing by vehicles over 3.5 metric tons"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
